# Nanokey

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bt.c  bt.h  firmware.c  firmware.h  hal.c  hal.h  keyboardhid.c  keyboardhid.h  nanokey.ioc  stm32l432kbux_flash.ld  types.h
Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
ST_USB_MW/: usbd_conf.c  usbd_conf.h  usbd_core.c  usbd_core.h  usbd_ctlreq.c  usbd_ctlreq.h  usbd_def.h  usbd_desc.c  usbd_desc.h  usbd_ioreq.c  usbd_ioreq.h
cmake/stm32cubemx/: CMakeLists.txt
